Correcting alignment for footers

--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@ body {
 .footer-link {
   display: grid;
   grid-template-columns: 1.5fr 2fr 2fr;
-  grid-template-rows: 15rem 10rem;
+  grid-template-rows: 25rem 15rem;
 }
 
 .company-list,
@@ -412,7 +412,7 @@ body {
 
 .list-link {
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 2.2rem;
   line-height: 1.6;
   color: #050505;
   letter-spacing: -0.1rem;
@@ -430,15 +430,22 @@ body {
 .footer-sign-up,
 .footer-community,
 .footer-language {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  font-weight: 500;
   padding-bottom: 0.8rem;
 }
 
 .sign-up-paragraph {
-  font-size: 2rem;
+  font-size: 2.2rem;
   line-height: 1.5;
   letter-spacing: -0.1rem;
   padding-bottom: 1rem;
+}
+
+.sign-up-email {
+  height: 3vw;
+  width: 22vw;
+  border: none;
 }
 
 .social-media-symbole {
